Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33095

Macros in Kit environment values are not expanded

XMLWordPrintable

    • 529f835c1 (17.0)

      It's allowed to use macros from the kit config UI to set environment, but they are not expanded later when used (At least for run environment).
      I tried to investigate a bit, around this function might be the right place to expand them:
      https://code.qt.io/cgit/qt-creator/qt-creator.git/tree/src/libs/utils/namevalueitem.cpp#n18

        For Gerrit Dashboard: QTCREATORBUG-33095
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            ajeandet Alexis Jeandet
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes