ProjectExplorer: Expand run environment

... before passing it to the process.

Fixes: QTCREATORBUG-33095
Change-Id: I2bbe9ed6205ae1a5b58736db86e064d5edc0b8b0
Reviewed-by: hjk <hjk@qt.io>